--- a/src/app/components/employee-list/employee-list.html
+++ b/src/app/components/employee-list/employee-list.html
@@ -4,13 +4,15 @@
     <span class="flex-1">Employee List</span>
     <mat-form-field appearance="outline" class="search-field mx-4" subscriptSizing="dynamic">
       <!-- <mat-label>Search</mat-label> -->
-      <input matInput 
-             [(ngModel)]="searchTerm"
-             (keyup.enter)="onSearchEmployee()"
-             placeholder="Search">
+      <input matInput [(ngModel)]="searchTerm" (keyup.enter)="onSearchEmployee()" placeholder="Search">
       <mat-icon matPrefix>search</mat-icon>
     </mat-form-field>
-    <button mat-raised-button color="accent" routerLink="/form">
+    <button mat-raised-button color="accent" routerLink="/projects">
+      <mat-icon>add</mat-icon>
+      Add New Projects
+    </button>
+    <div class="mx-4"></div>
+    <button mat-raised-button color="accent" routerLink="/employees">
       <mat-icon>add</mat-icon>
       Add New Employee
     </button>
@@ -30,7 +32,7 @@
           <!-- Name Column -->
           <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef> Name </th>
-            <td mat-cell *matCellDef="let employee"> 
+            <td mat-cell *matCellDef="let employee">
               <strong>{{employee.name}}</strong>
             </td>
           </ng-container>
@@ -72,14 +74,12 @@
           <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef class="text-center"> Actions </th>
             <td mat-cell *matCellDef="let employee" class="text-center">
-              <button mat-icon-button color="primary" 
-                      (click)="navigateToEdit(employee.empId)"
-                      matTooltip="Edit Employee">
+              <button mat-icon-button color="primary" (click)="navigateToEdit(employee.empId)"
+                matTooltip="Edit Employee">
                 <mat-icon>edit</mat-icon>
               </button>
-              <button mat-icon-button color="warn" 
-                      (click)="onDeleteEmployee(employee.empId)"
-                      matTooltip="Delete Employee">
+              <button mat-icon-button color="warn" (click)="onDeleteEmployee(employee.empId)"
+                matTooltip="Delete Employee">
                 <mat-icon>delete</mat-icon>
               </button>
             </td>
@@ -89,18 +89,15 @@
           <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="hover:bg-gray-50"></tr>
         </table>
       </div>
-      
+
       <!-- No Data Message -->
       <div *ngIf="filteredEmployees.length === 0" class="text-center py-8">
         <mat-icon class="text-6xl text-gray-300">inbox</mat-icon>
         <p class="text-gray-500 mt-2">No employees found</p>
       </div>
     </mat-card-content>
-    <mat-paginator [length]="100"
-              [pageSize]="10"
-              [pageSizeOptions]="[5, 10, 25, 100]"
-              aria-label="Select page">
-</mat-paginator>
+    <mat-paginator [length]="100" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page">
+    </mat-paginator>
 
   </mat-card>
 </div>
